--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -5,8 +5,9 @@
 
 
 .container{
-    grid-template-columns: [first] 100px [line2] auto [end];
+    grid-template-columns: 1fr 3fr;
     grid-template-areas:
     "image content";
+    gap:15px;
 
 }
