--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,9 +2,13 @@
 layout: page
 ---
 
+---
+layout: page
+---
+
 {{ content }}
 
-{% assign posts = paginator.posts | default: site.posts %}
+{% assign posts = site.tags['projects'] %}
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
