--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,13 +2,9 @@
 layout: page
 ---
 
----
-layout: page
----
-
 {{ content }}
 
-{% assign posts = site.tags['projects'] %}
+{% assign posts = paginator.posts | default: site.posts %}
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
