--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -669,6 +669,17 @@ footer .footer-custom-content {
   margin: 5rem 0 1.25rem;
   position: relative;
 }
+
+.intro-header::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(021, 26, 48, 0.5); /* Change the color and opacity as needed */
+}
 .intro-header.big-img {
   background: no-repeat center center;
   -webkit-background-size: cover;
