--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -670,7 +670,7 @@ footer .footer-custom-content {
   position: relative;
 }
 
-.intro-header::before {
+.intro-header.big-img::before {
   content: "";
   display: block;
   position: absolute;
@@ -680,6 +680,7 @@ footer .footer-custom-content {
   height: 100%;
   background-color: rgba(021, 26, 48, 0.5); /* Change the color and opacity as needed */
 }
+
 .intro-header.big-img {
   background: no-repeat center center;
   -webkit-background-size: cover;
