--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -74,7 +74,12 @@ h1, h2, h3, h4 {
 }
 a {
   color: var(--link-col);
+  padding: 1px 6px;
+  border: 1px outset buttonborder;
+  border-radius: 3px;
+  text-decoration: none;
 }
+
 a:hover,
 a:focus {
   color: var(--hover-col);
