--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -44,10 +44,26 @@ grid-area: content;
   }
 
   .link-text {
-    padding: 1px 6px;
-    border: 1px outset buttonborder;
-    border-radius: 3px;
-    text:#fff;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-color: #151A30;
+    text-decoration-thickness: 1px;
+  }
+
+  .link-text:hover {
     background-color: #151A30;
     text-decoration: none;
   }
+
+  .link-text::before{
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
