--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -43,6 +43,16 @@ grid-area: content;
     transform: scale(1.05);
   }
 
+  .link-text {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+  }
+  
+  .link-text:hover {
+    color: #000;
+  }
+
 
   .link-text::before{
   content: "";
